--- a/12.html
+++ b/12.html
@@ -24,6 +24,9 @@
 <link rel="stylesheet" type="text/css" href="/css/css1.css">
 <style>
  .responsive {
+display: block;
+  margin-left: auto;
+  margin-right: auto;
     max-width: 100%; 
     width: auto; 
     height: auto;
