--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -22,9 +22,13 @@
 <meta name="application-name" content="Y2converts.com" />
 <link rel="stylesheet" type="text/css" href="/css/css1.css">
 <style>
-								   .responsive {
-  width: 100%;
-  height: auto;
+ .responsive {
+display: block;
+  margin-left: auto;
+  margin-right: auto;
+    max-width: 100%; 
+    width: auto; 
+    height: auto;
 }
 								   h4{
     font-weight: 600;
@@ -86,6 +90,8 @@ Follow on Youtube
 </header>
 <div class="container">
 <div class="ftco-section center" id="convert">
+<a target="_blank" href="https://shareasale.com/r.cfm?b=1765212&amp;u=2831906&amp;m=97231&amp;urllink=&amp;afftrack="><img src="https://static.shareasale.com/image/97231/970x90_02.gif" border="0" class="responsive" alt="Traffic Analysts Tool" /></a>
+
 <h1 class="title">Youtube mp3</h1>
 <p>Download free mp3 converted youtube mp3 from our free Youtube mp3 converter</p>
 <form id="search-form" class="search-form relative" action="/en7" method="GET">
