--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -97,7 +97,7 @@ Follow on Youtube
 <p>Download free mp3 converted youtube mp3 from our free Youtube mp3 converter</p>
 <form id="search-form" class="search-form relative" action="/en7" method="GET">
 <input id="s_input" type="search" name="q" class="search__input" aria-label="Search" placeholder="Search or paste Youtube link here" value="">
-<button class="btn-red" type="button" onclick="ksearchmp3();">Convert To MP3</button>
+<button class="btn-red" type="button" onclick="ksearchvideo();">Convert To MP3</button>
 </form>
 <div id="content-wrapper" class=""><div class="loading mt-5"> <img alt="loading" src="https://i.ibb.co/fM1gFt5/Pulse-0-7s-226px.png" style="max-width: 60px;"></div></div>
 <div id="search-result">
