--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -4,7 +4,7 @@
 <head>
 <title>Youtube mp3 Converter|Fastest High Quality Youtube mp3 converter|</title>
 <meta name="description" content="Convert and download Youtube mp3 mp3s to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple." />
-<link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id.html" />
+<link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id" />
 <meta name="theme-color" content="red" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -31,7 +31,7 @@ display: block;
     width: auto; 
     height: auto;
 }
-								   h4{
+.h4{
     font-weight: 600;
     font-size: 29px;
     margin-bottom: 15px;
@@ -95,7 +95,7 @@ Follow on Youtube
 
 <h1 class="title">Youtube mp3</h1>
 <p>Download free mp3 converted youtube mp3 from our free Youtube mp3 converter</p>
-<form id="search-form" class="search-form relative" action="/en7" method="GET">
+<form id="search-form" class="search-form relative" action="/youtube-mp3/en-id" method="GET">
 <input id="s_input" type="search" name="q" class="search__input" aria-label="Search" placeholder="Search or paste Youtube link here" value="">
 <button class="btn-red" type="button" onclick="ksearchvideo();">Convert To MP3</button>
 </form>
