--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Youtube mp3 Converter|Fastest High Quality Youtube mp3 converter|</title>
+<title>Youtube mp3|Fastest High Quality Youtube mp3 converter|</title>
 <meta name="description" content="Convert and download Youtube mp3 mp3s to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple." />
 <link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id" />
 <meta name="theme-color" content="red" />
