--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -21,22 +21,7 @@
 <link rel="icon" type="image/png" href="/image/favicon.PNG" />
 <meta name="application-name" content="Y2converts.com" />
 <link rel="stylesheet" type="text/css" href="/css/css1.css">
-<style>
- .centre {
-padding: 0px 0px 20px;
-display: block;
-  margin-left: auto;
-  margin-right: auto;
-    max-width: 100%; 
-    width: auto; 
-    height: auto;
-}
-h4{
-    font-weight: 600;
-    font-size: 29px;
-    margin-bottom: 15px;
-    text-align: center;
-}</style>
+<link rel="stylesheet" type="text/css" href="/css/css2.css">
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-200890208-2"></script>
 <script>
