--- a/youtube-mp3/ch.html
+++ b/youtube-mp3/ch.html
@@ -25,7 +25,7 @@ best youtube to mp3" />
 	<link rel="alternate" href="/youtube-mp3/es" hreflang="es" />
 	<link rel="alternate" href="/youtube-mp3/fr" hreflang="fr" />
 	<link rel="alternate" href="/youtube-mp3/hi" hreflang="hi" />
-	<link rel="alternate" href="/youtube-mp3/id" hreflang="id" />
+	<link rel="alternate" href="/youtube-mp3/en-id" hreflang="id" />
 	<link rel="alternate" href="/youtube-mp3/it" hreflang="it" />
 	<link rel="alternate" href="/youtube-mp3/ja" hreflang="ja" />
 	<link rel="alternate" href="/youtube-mp3/ko" hreflang="ko" />
