--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -14,10 +14,10 @@
 <meta property="og:title" content="Youtube mp3 Converter|High Quality Youtube mp3 converter" />
 <meta property="og:description" content="Convert and download Youtube to MP3 for free with our Youtube mp3 converter. The downloading is very quick and simple." />
 <meta property="og:image" content="/image/favicon.PNG" />
-<link rel="alternate" href="/youtube-mp3/en-id.html" hreflang="x-default" />
-<link rel="alternate" href="/youtube-mp3/en-id.html" hreflang="en-id" />
-<link rel="alternate" href="/youtube-mp3/hi.html" hreflang="in" />
-<link rel="alternate" href="/youtube-mp3/ph.html" hreflang="ph" />
+<link rel="alternate" href="/youtube-mp3/en-id" hreflang="x-default" />
+<link rel="alternate" href="/youtube-mp3/en-id" hreflang="en-id" />
+<link rel="alternate" href="/youtube-mp3/hi" hreflang="in" />
+<link rel="alternate" href="/youtube-mp3/ph" hreflang="ph" />
 <link rel="icon" type="image/png" href="/image/favicon.PNG" />
 <meta name="application-name" content="Y2converts.com" />
 <link rel="stylesheet" type="text/css" href="/css/css1.css">
