--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -258,6 +258,34 @@ Don't Forget to SHARE the Website",
   }]    
 }
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "NewsArticle",
+  "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://y2converts.com/youtube-mp3/en-id/"
+  },
+  "headline": "Convert YouTube to mp3 or youtube mp3. The faster Way.☝️",
+  "description": "Click hear to convert YouTube to MP3. This is a faster and high-quality way to convert YouTube MP3 so why are you waiting click here Now.",
+  "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSe0E6QdM3fXBEgDkvrFcdShrRi70yTt8PnFg&usqp=CAU",  
+  "author": {
+    "@type": "Person",
+    "name": "Adarsh Dubey",
+    "url": "http://y2converts.com"
+  },  
+  "publisher": {
+    "@type": "Organization",
+    "name": "",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSe0E6QdM3fXBEgDkvrFcdShrRi70yTt8PnFg&usqp=CAU"
+    }
+  },
+  "datePublished": "2021-10-02",
+  "dateModified": "2021-10-02"
+}
+</script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-60cc6660890a374e"></script>
 </body>
 </html>
