--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -261,6 +261,34 @@ Don't Forget to SHARE the Website",
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [{
+    "@type": "Question",
+    "name": "Is it safe to convert youtube mp3?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Yes. It is safe, if you convert it from y2converts.com."
+    }
+  },{
+    "@type": "Question",
+    "name": "Does y2converts.com convert youtube to mp3 in faster than other?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Yes."
+    }
+  },{
+    "@type": "Question",
+    "name": "Which format you have?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "We have many format like mp3, MP4, 3gp and many more."
+    }
+  }]
+}
+</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
   "@type": "NewsArticle",
   "mainEntityOfPage": {
     "@type": "WebPage",
