--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -182,7 +182,7 @@ YouTube-to-mp3 online converters: These convert files directly from YouTube in y
 </div>
 </div>
 <h4 class="title">Conclusion</h4>
-<p1 class="mw70" style="font-weight:100">
+<p1 class="centre" style="font-weight:100" >
 That’s it, now you can download your favorite YouTube mp3 and play it on your Android device! I recommend using a stable connection while downloading and converting. I suggest to update your favorite YouTube mp3 to MP3 converter and test it in your mobile device to save a lot of time. But when you’ve got a stable connection, I recommend using this amazing YouTube to MP3 converter! Finally, let me show you some more awesome free YouTube to MP3 converter website! You Might Also Like These Excellent Tools To Convert mp3s On Your Computer & Android Device Cheap YouTube mp3 Downloader & Converter Free YouTube Downloader & converter – Keeps the files safe so no worries about data loss. Free YouTube Downloader: You can easily download Youtube mp3s from 1.</p1>
 </div>
 <script type="text/javascript">
