--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -20,7 +20,7 @@
 <link rel="alternate" href="/youtube-mp3/ph" hreflang="ph" />
 <link rel="icon" type="image/png" href="/image/favicon.PNG" />
 <meta name="application-name" content="Y2converts.com" />
-<link rel="stylesheet" type="text/css" href="/css/css1.css">
+<link rel="stylesheet" type="text/css" href="https://drive.google.com/uc?export=download&id=1i-TmqSGh32lnonlTMVDCqKy6uGfzH6k7">
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-200890208-2"></script>
 <script>
