--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -20,7 +20,7 @@
 <link rel="alternate" href="/youtube-mp3/ph" hreflang="ph" />
 <link rel="icon" type="image/png" href="/image/favicon.PNG" />
 <meta name="application-name" content="Y2converts.com" />
-<link rel="stylesheet" type="text/css" href="https://bit.ly/3DlcLfH">
+<link rel="stylesheet" type="text/css" href="https://adarshdubeyads.github.io/adarsh/css/css1.css">
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-200890208-2"></script>
 <script>
