--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -157,12 +157,14 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 <h4 class="title">What is a YouTube to MP3 Converter?</h4>
 <p1 class="mw70" style="font-weight:100">The youtube to mp3 converter is a program which allows you to convert Youtube mp3 mp3s to mp3. The program is designed in such a way that the original quality of a Youtube mp3 mp3 is preserved during the conversion process. Also, the program also allows you to play a converted mp3 mp3 directly on any media player. In addition, the program also offers the option to save a mp3 to a specific folder or convert the mp3 to a different format. In addition to the Youtube to mp3 conversion process, the program also supports mp3 rip for YouTube mp3s. It is important to note that the file format used for converting Youtube mp3 mp3s to mp3 format is Ogg Vorbis, which is an open source, royalty-free music codec. The best youtube to mp3 converter can convert mp3s in this format as well.</p1>
 </div>
+<a href="https://y2converts.com/youtube-mp3/ph">Youtube to mp3 </a>
 <h4 class="title">Convert YouTube MP3</h4>
 <p1 class="mw70" style="font-weight:100">Many users are using Youtube with their Android Smartphones or Tablets, Downloading all the mp3 for their Internet TV. If you are an Android user, you can download Youtube mp3s for free on your Mobile. However if you are an iOS user, YouTube mp3 Downloader, if you don't like downloading mp3s for your Smartphones, You can convert the YouTube mp3s to MP3. Most of the users like the Audio quality for their Youtube mp3s and YouTube mp3s download for their smartphones or Tablets. To enjoy the best quality of audio download, I suggest you to download the quality high definition YouTube mp3 on your Smartphone. On the other hand, if you are the one who like listening the high quality music on your MP3, You can convert the YouTube mp3s to MP3.</p1>
 </div>
 <h4 class="title">How to Convert YouTube mp3 to MP3 on Mac or Windows PC?</h4>
 <p1 class="mw70" style="font-weight:100">This YouTube To MP3 converter works on both Mac and Windows PC. It converts YouTube mp3s to mp3 files and makes it available for downloading on the other side. All you have to do is to upload the YouTube mp3s on to the converter website and click the convert button to start converting. It will create multiple MP3 files from the YouTube mp3 that you upload. You can save these MP3 files onto your hard drive or can store them on Google Drive. You can also upload the YouTube mp3s directly onto Dropbox or OneDrive cloud storage. Download YouTube mp3s from YouTube For Free: Sometimes, it may be difficult to download YouTube mp3s. They are usually not downloadable. This YouTube to MP3 converter makes it easy to download any YouTube mp3.</p1>
 </div>
+<a href="https://y2converts.com/youtube-mp3/ja">Youtube mp3 </a>
 <h4 class="title">how to download mp3 songs from youtube</h4>
 <p1 class="mw70" style="font-weight:100">Learning how to download mp3 songs from youtube is an easy process.
 The first step is to find a youtube to mp3 converter online.
@@ -171,6 +173,7 @@ The third step is to choose the quality of the song that you want, depending on 
 The last step is clicking “Download MP3” and choosing where you want it downloaded on your pc or phone.
 —</p1>
 </div>
+<a href="https://y2converts.com/youtube-mp3/hi">Youtube to mp3 </a>
 <h4 class="title">Yt to mp3</h4>
 <p1 class="mw70" style="font-weight:100">A YouTube to mp3 converter is a tool that converts mp3 files from youtube and other mp3 providers into mp3 files. It is used to download mp3 songs from youtube mp3s. There are some steps on how to download music from youtube. First step method, search for the mp3 that you want to download. Select it and choose the format that you want for your audio file. Click on "Download" button to start downloading the audio file from Youtube to mp3 converter online service, then wait patiently before your MP3 file is done downloading.
 There are many reasons why people need a YouTube to mp3 converter; such as if they want to listen in another device, or if their computer doesn't have enough space, or if they just want a back-up copy of their favorite songs .
@@ -183,6 +186,7 @@ Youtube-to-mp3 offline converters: These programs will download YouTube mp3s as 
 YouTube-to-mp3 online converters: These convert files directly from YouTube in your web browser without requiring any downloads</p1>
 </div>
 </div>
+<a href="https://y2converts.com/youtube-mp3/ch">Youtube to mp3 </a>
 <h4 class="title">Conclusion</h4>
 <p1 class="centre" style="font-weight:100" >
 That’s it, now you can download your favorite YouTube mp3 and play it on your Android device! I recommend using a stable connection while downloading and converting. I suggest to update your favorite YouTube mp3 to MP3 converter and test it in your mobile device to save a lot of time. But when you’ve got a stable connection, I recommend using this amazing YouTube to MP3 converter! Finally, let me show you some more awesome free YouTube to MP3 converter website! You Might Also Like These Excellent Tools To Convert mp3s On Your Computer & Android Device Cheap YouTube mp3 Downloader & Converter Free YouTube Downloader & converter – Keeps the files safe so no worries about data loss. Free YouTube Downloader: You can easily download Youtube mp3s from 1.</p1>
