--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -155,7 +155,7 @@ We are the best platform of online Youtube mp3 converter. You will get easy meth
 </div>
 </section>
 <div class="ftco-section center">
-<a href="https://www.bluehost.com/track/adarshdubey77/" target="_blank"> <img border="0" src="https://bluehost-cdn.com/media/partner/images/adarshdubey77/728x90/728x90BW.png" class="centre" > </a>
+<a href="https://www.bluehost.com/track/adarshdubey77/" target="_blank"> <img border="0" alt="youtube mp3" src="https://bluehost-cdn.com/media/partner/images/adarshdubey77/728x90/728x90BW.png" class="centre" > </a>
 <h4 class="title">What is a YouTube to MP3 Converter?</h4>
 <p1 class="mw70" style="font-weight:100">The youtube to mp3 converter is a program which allows you to convert Youtube mp3 mp3s to mp3. The program is designed in such a way that the original quality of a Youtube mp3 mp3 is preserved during the conversion process. Also, the program also allows you to play a converted mp3 mp3 directly on any media player. In addition, the program also offers the option to save a mp3 to a specific folder or convert the mp3 to a different format. In addition to the Youtube to mp3 conversion process, the program also supports mp3 rip for YouTube mp3s. It is important to note that the file format used for converting Youtube mp3 mp3s to mp3 format is Ogg Vorbis, which is an open source, royalty-free music codec. The best youtube to mp3 converter can convert mp3s in this format as well.</p1>
 </div>
