--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
 
-<title>Youtube mp3|Fastest High Quality Youtube mp3 converter|</title>
-<meta name="description" content="Convert and download Youtube mp3 mp3s to MP3 for free with our Youtube mp3 conveter. The downloading is very quick and simple." />
+<title>
+Free YouTube to mp3 converter, fast convert YouTube to mp3</title>
+<meta name="description" content="The best free online converter video and audio to mp3 (mp4) from YouTube without registration." />
 <link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id" />
 <meta name="theme-color" content="red" />
-<meta name="rankz-verification" content="VcC0E5cMZx1kgok5">
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <meta name="keywords" content = youtube mp3, youtube to mp3,youtube,mp3,converter,downloader,best youtube to mp3 converter best youtube to mp3" />
