--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -86,7 +86,7 @@ Follow on Youtube
 <input id="s_input" type="search" name="q" class="search__input" aria-label="Search" placeholder="Search or paste Youtube link here" value="">
 <button class="btn-red" type="button" onclick="ksearchvideo();">Convert To MP3</button>
 </form>
-<div id="content-wrapper" class=""><div class="loading mt-5"> <img alt="loading" src="https://i.ibb.co/fM1gFt5/Pulse-0-7s-226px.png" style="max-width: 60px;"></div></div>
+<div id="content-wrapper" class=""><div class="loading mt-5"> <img alt="loading" src="https://y2converts.com/image/Tag-For-Loading-Bar-Gif-Transparent-Loading-Gif-.gif" style="max-width: 60px;"></div></div>
 <div id="search-result">
 </div>
 </div>
