--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -217,5 +217,42 @@ YouTube To MP3 Converter Best Download YouTube to MP3. Ytmp3 320ytmp3 Y2mate. Ar
 </footer>
 <script type="text/javascript" src="/js/js1.js" async defer></script>
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [{
+    "@type": "Question",
+    "name": "Which is the best Youtube to Mp3 converter ?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Y2converts.com is best website to convert YouTube to MP3."
+    }
+  },{
+    "@type": "Question",
+    "name": "YouTube to MP3 converter is safe ?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "Yess."
+    }
+  },{
+    "@type": "Question",
+    "name": "How to convert YouTube to MP3 ?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "1.Paste youtube video url in search box.
+2.Click on convert button.
+3.Click on download."
+    }
+  },{
+    "@type": "Question",
+    "name": "Does it need registration ?",
+    "acceptedAnswer": {
+      "@type": "Answer",
+      "text": "NO."
+    }
+  }]
+}
+</script>
 </body>
 </html>
