--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -165,7 +165,7 @@ We are the best platform of online Youtube to mp3 converter. You will get easy m
 </div>
 <a href="https://y2converts.com/youtube-mp3/ja">Youtube mp3 </a>
 <h4 class="title">how to download mp3 songs from youtube</h4>
-<p1 class="mw70" style="font-weight:100">Learning how to download mp3 songs from youtube is an easy process.
+<p1 class="mw70" style="font-weight:100" align="justify" >Learning how to download mp3 songs from youtube is an easy process.
 The first step is to find a youtube to mp3 converter online.
 The second step is to copy and paste the youtube url into the box and click on “Convert”.
 The third step is to choose the quality of the song that you want, depending on how much time you have and how good of a quality you want. Usually, 128kpbs will be sufficient for most things including listening on YouTube or in your car stereo.
