--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -90,9 +90,7 @@ Follow on Youtube
 </div>
 <div class="ftco-section center">
 <h2 class="title">The Best Youtube to mp3 converter</h2>
-<p class="mw70">Y2converts.com is Youtube to mp3 converter and downloader which helps you save Youtube video to your device quickly and safely. We have various variety for you to download best Youtube to mp3 video.
-We’ve analyzed more than 35 Youtube to mp3 converters to help you pick the best one. It will be more helpful if we explain what a good Youtube converter is.  There are tons of online converter services on the internet, yet not all of them are good. Why is that so? Simple, a good Youtube converter should meet a few criteria.  - Seamless, user-friendly interface - Choose a size option and have it automatically converted - No ad interruption.  We’ve tested and analyzed each and every converter to find the best one.  The Best Youtube mp3 converter  The best free online converter video and audio to mp3 (mp4) from YouTube without registration. - Choose a size option and have it automatically converted - No ad interruption. - No conversion issues. - High conversion speed. - And much more.
-</p>
+<p class="mw70">Y2converts.com is Youtube to mp3 converter and downloader which helps you save Youtube video to your device quickly and safely. We have various variety for you to download best Youtube to mp3 video. We are the best platform of online Youtube to mp3 converter. You will get easy method to convert youtube to mp3.</p>
 <ul class="listitem items-more">
 <a target="_blank" href="https://shareasale.com/r.cfm?b=1502297&amp;u=2831906&amp;m=46483&amp;urllink=&amp;afftrack="><img src="https://static.shareasale.com/image/46483/bundle-affiliates-2-728x90.gif" border="0" class="centre" alt="Free Domain &amp;amp; 50% off Shared Hosting" /></a>
 <li>
@@ -124,7 +122,7 @@ We’ve analyzed more than 35 Youtube to mp3 converters to help you pick the bes
 </div>
 </div>
 <div class="ftco-section center">
-<h1 class="title">Online Youtube to MP3 Converter</h1>
+<h2 class="title">Online Youtube to MP3 Converter</h2>
 <p1 class="mw70" style="font-weight:100">Download Youtube mp3 with Y2converts.com YouTube Mp3 Converter. By using our downloader you can convert YouTube mp3s to MP3, MP4, 3GP,files and download them for free - this service works for computers, tablets and mobile devices. The mp3s are always converted in the highest available quality OR you can change quality as per your wish.</p1>
 <p class="magT40"><a class="btn-red mag0" type="button" href="#convert">Convert now</a></p>
 </div>
@@ -155,7 +153,8 @@ We’ve analyzed more than 35 Youtube to mp3 converters to help you pick the bes
 <div class="ftco-section center">
 <a href="https://www.bluehost.com/track/adarshdubey77/" target="_blank"> <img border="0" alt="youtube mp3" src="https://bluehost-cdn.com/media/partner/images/adarshdubey77/728x90/728x90BW.png" class="centre" > </a>
 <h2 class="title">What is a YouTube to MP3 Converter?</h2>
-<p1 class="mw70" style="font-weight:100" align="justify" >The person who invented the YouTube to MP3 converter is a genius. He probably sat back and thought to himself, “I love watching YouTube and would love to be able to save it to my MP3 player. Obviously, there is no way to do that.” The idea came to life when he came across a website called y2converts.com. The website had a section that allowed one to download any video they liked to their computer. However, there was a catch. The website was only available from a browser and the video had to be in the .flv file format.  The idea was simple. One would visit y2converts.com, find the video he or she wanted, and then save it to the computer. After that, one could simply open the computer’s file browser, type y2converts.com into the search bar, and then click the website icon to open it. Finally, one could click on the link that would take him to y2converts.com, where he could download the video to his computer.</p>  </div>
+<p1 class="mw70" style="font-weight:100" align="justify" >The youtube to mp3 converter is a program which allows you to convert Youtube mp3 mp3s to mp3. The program is designed in such a way that the original quality of a Youtube mp3 mp3 is preserved during the conversion process. Also, the program also allows you to play a converted mp3 mp3 directly on any media player. In addition, the program also offers the option to save a mp3 to a specific folder or convert the mp3 to a different format. In addition to the Youtube to mp3 conversion process, the program also supports mp3 rip for YouTube mp3s. It is important to note that the file format used for converting Youtube mp3 mp3s to mp3 format is Ogg Vorbis, which is an open source, royalty-free music codec. The best youtube to mp3 converter can convert mp3s in this format as well.
+</p>  </div>
 <a href="https://onl.st/Amazing-Facts/">Youtube to mp3 </a>
 <h2 class="title">Convert YouTube MP3</h2>
 <p1 class="mw70" style="font-weight:100">Many users are using Youtube with their Android Smartphones or Tablets, Downloading all the mp3 for their Internet TV. If you are an Android user, you can download Youtube mp3s for free on your Mobile. However if you are an iOS user, YouTube mp3 Downloader, if you don't like downloading mp3s for your Smartphones, You can convert the YouTube mp3s to MP3. Most of the users like the Audio quality for their Youtube mp3s and YouTube mp3s download for their smartphones or Tablets. To enjoy the best quality of audio download, I suggest you to download the quality high definition YouTube mp3 on your Smartphone. On the other hand, if you are the one who like listening the high quality music on your MP3, You can convert the YouTube mp3s to MP3.</p1>
