--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -3,7 +3,7 @@
 <head>
 <title>
 Youtube to MP3 Converter : Convert and save for free - Y2Converts</title>
-<meta name="description" content="The best free online converter video and audio to mp3 (mp4) from YouTube without registration." />
+<meta name="description" content="Downloading videos from youtube is easy using our Youtube to MP3 Converter website. Just follow these steps and enjoy!" />
 <script src="/cdn-cgi/apps/head/elgUFyCatlfWRmBzNOxTvWEbgRo.js"></script><link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id" />
 <meta name="theme-color" content="red" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
