--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>
-Youtube to MP3 Converter : Convert and save for free - Y2Converts</title>
+Youtube to MP3 Converter : Convert and save for free ~ Y2Converts</title>
 <meta name="description" content="Downloading videos from youtube is easy using our Youtube to MP3 Converter website. Just follow these steps and enjoy!" />
 <script src="/cdn-cgi/apps/head/elgUFyCatlfWRmBzNOxTvWEbgRo.js"></script><link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id" />
 <meta name="theme-color" content="red" />
