--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -73,7 +73,8 @@ Follow on Youtube
 </header>
 <div class="container">
 <div class="ftco-section center" id="convert">
-<a href="https://www.bluehost.com/track/adarshdubey77/" target="_blank"> <img border="0" src="https://bluehost-cdn.com/media/partner/images/adarshdubey77/760x80/760x80BW.png"> </a>
+<a href="https://www.bluehost.com/track/adarshdubey77/" target="_blank"> <img border="0" alt="youtube mp3" src="https://bluehost-cdn.com/media/partner/images/adarshdubey77/728x90/728x90BW.png" class="centre"> </a>
+
 <h1 class="title">Youtube mp3</h1>
 <p>Download free youtube to mp3 converted video from our free Youtube mp3 converter</p>
 <form id="search-form" class="search-form relative" action="/youtube-mp3/en-id" method="GET">
