--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -76,7 +76,7 @@ Follow on Youtube
 <a href="https://www.bluehost.com/track/adarshdubey77/" target="_blank"> <img border="0" alt="youtube mp3" src="https://bluehost-cdn.com/media/partner/images/adarshdubey77/728x90/728x90BW.png" class="centre"> </a>
 
 <h1 class="title">Youtube MP3 Converter</h1>
-<p>Download free youtube to mp3 converted video from our free Youtube mp3 converter</p>
+<p>Download free youtube to mp3 converted video from our free Youtube to MP3 Converter</p>
 <form id="search-form" class="search-form relative" action="/youtube-mp3/en-id" method="GET">
 <input id="s_input" type="search" name="q" class="search__input" aria-label="Search" placeholder="Search or paste Youtube link here" value="">
 <button class="btn-red" type="button" onclick="ksearchvideo();">Convert To MP3</button>
