--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -61,7 +61,7 @@ Youtube to MP3 Converter : Convert and save for free ~ Y2Converts</title>
 <div id="navbar" class="navbar-collapse">
 <ul class="nav navbar-nav">
 <li><a href="/youtube-mp3/en-id/" class="active">
-Youtube mp3
+Youtube to MP3
 </a>
 </li>
 <li class="nav-item"> <a href="https://www.youtube.com/channel/UChQ7F1Rx-DWco_PIspv0kUA">
