--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -68,8 +68,7 @@ Youtube to MP3
 Follow on Youtube
 </a>
 </li>
-<li class="nav-item"> <a href="https://www.youtube.com/channel/UChQ7F1Rx-DWco_PIspv0kUA">
-Grab Deals
+<li class="nav-item"> <a href="https://y2converts.com/youtube-downloader">Youtube Downloader
 </a>
 </li>
 </ul>
