--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -19,6 +19,9 @@ Youtube to MP3 Converter : Convert and save for free ~ Y2Converts</title>
 <link rel="alternate" hreflang="en-US" href="https://y2converts.com/youtube-mp3/en-id" />
 <link rel="alternate" hreflang="en-GB" href="https://y2converts.com/youtube-mp3/en-id" />
 <link rel="alternate" hreflang="en-IN" href="https://y2converts.com/youtube-mp3/en-id" />
+<link rel="alternate" hreflang="x-default" href="https://y2converts.com/youtube-mp3/en-id"/>
+<link rel="alternate" hreflang="en-us" href="https://y2converts.com/youtube-mp3/en-id"/>
+
 <link rel="icon" type="image/png" href="/image/favicon.PNG" />
 <meta name="application-name" content="Y2converts.com" />
 <link rel="stylesheet" type="text/css" href="https://adarshdubeyads.github.io/adarsh/css/css1.css">
