--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -5,7 +5,7 @@
 Youtube to MP3 Converter : Convert and save for free ~ Y2Converts</title>
 <meta name="description" content="Downloading videos from youtube is easy using our Youtube to MP3 Converter website. Just follow these steps and enjoy!" />
 <script src="/cdn-cgi/apps/head/elgUFyCatlfWRmBzNOxTvWEbgRo.js"></script><link rel="canonical" href="https://y2converts.com/youtube-mp3/en-id" />
-<meta name="theme-color" content="red" />
+<meta name="theme-color" content="blue" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <meta name="keywords" content = youtube mp3, youtube to mp3,youtube,mp3,converter,downloader,best youtube to mp3 converter best youtube to mp3" />
@@ -14,9 +14,8 @@ Youtube to MP3 Converter : Convert and save for free ~ Y2Converts</title>
 <meta property="og:title" content="Youtube mp3 Converter|High Quality Youtube mp3 converter" />
 <meta property="og:description" content="Convert and download Youtube to MP3 for free with our Youtube mp3 converter. The downloading is very quick and simple. Hi, Impact" />
 <meta property="og:image" content="/image/favicon.PNG" />
-<link rel="alternate" hreflang="x-default" href="https://y2converts.com/youtube-mp3/en-id"/>
-<link rel="alternate" hreflang="en-us" href="https://y2converts.com/youtube-mp3/en-id"/>
-
+<link rel="alternate" href="https://y2converts.com/youtube-mp3/en-id" hreflang="en">
+  
 <link rel="icon" type="image/png" href="/image/favicon.PNG" />
 <meta name="application-name" content="Y2converts.com" />
 <link rel="stylesheet" type="text/css" href="https://adarshdubeyads.github.io/adarsh/css/css1.css">
