--- a/youtube-mp3/en-id.html
+++ b/youtube-mp3/en-id.html
@@ -249,6 +249,7 @@ YouTube To MP3 Converter Best Download YouTube to MP3. Ytmp3 320ytmp3 Y2mate. Ar
   }]
 }
 </script>
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5168230,document.body||document.documentElement)</script>
 <script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://inklinkor.com/tag.min.js',5168220,document.body||document.documentElement)</script>
 </body>
 </html>
